<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/server_header">

        <EditTextPreference
            app:key="@string/instance_url_pref_id"
            app:title="@string/instance_url"
            app:defaultValue="https://postroom.warwick.ac.uk"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Authentication">
        <Preference
            app:key="link"
            app:title="Link identities"
            app:summary="Enable the native parts of the app to authenticate with the website"/>

        <Preference
            app:key="logout"
            app:title="Force logout"
            app:summary="Terminate the current single-sign on session so that you can switch user"/>

    </PreferenceCategory>
</PreferenceScreen>