<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settingsBtn"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shelfAuditMenuItem"
        android:title="Shelf audit"
        app:showAsAction="never" />
    <item
        android:id="@+id/rtsMenuItem"
        android:title="Return to sender"
        app:showAsAction="never" />
    <item
        android:id="@+id/moveItemsMenuItem"
        android:title="Change item locations"
        app:showAsAction="never" />
    <item
        android:id="@+id/viewRecentActivityMenuItem"
        android:title="View my activity" />
    <item
        android:id="@+id/heldCentrallyItemsMenuItem"
        android:title="@string/held_centrally" />
    <item
        android:id="@+id/legacyAddNewItemsItem"
        android:title="@string/legacy_add_items"
        app:showAsAction="never" />
</menu>