<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/boxesBannerImage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/boxes_in_a_pile"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boxes" />

        <TextView
            android:id="@+id/textWhatDoYouWantToDo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/what_do_you_want_to_do"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boxesBannerImage" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/nfcExplainerLayout"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textWhatDoYouWantToDo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/addNewItemsCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!-- Media -->
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:contentDescription="Westwood Student Post room"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/spr_entrance" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="16dp"
                                android:paddingTop="16dp"
                                android:paddingEnd="16dp"
                                android:paddingRight="16dp">

                                <!-- Title, secondary and supporting text -->
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Add new items"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="0dp"
                                    android:layout_marginBottom="16dp"
                                    android:text="Process new items at Westwood prior to hub distribution."
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/finaliseAtHubCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!-- Media -->
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:contentDescription="Boxes on shelves"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/boxes" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="16dp"
                                android:paddingTop="16dp"
                                android:paddingEnd="16dp"
                                android:paddingRight="16dp">

                                <!-- Title, secondary and supporting text -->
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Finalise items at hub"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="0dp"
                                    android:layout_marginBottom="16dp"
                                    android:text="Move items at hub onto shelf, informing recipient."
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/manualCollectionCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:clickable="true"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <!-- Media -->
                        <com.google.android.material.imageview.ShapeableImageView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:contentDescription="Driving license"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/driving_license" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:paddingLeft="16dp"
                                android:paddingTop="16dp"
                                android:paddingEnd="16dp"
                                android:paddingRight="16dp">

                                <!-- Title, secondary and supporting text -->
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="Manual collection"
                                    android:textAppearance="?attr/textAppearanceHeadline6" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="0dp"
                                    android:layout_marginBottom="16dp"
                                    android:text="Collect items by name, university ID or room. Check recipient's ID."
                                    android:textAppearance="?attr/textAppearanceBody2"
                                    android:textColor="?android:attr/textColorSecondary" />

                            </LinearLayout>

                        </LinearLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>

        <!--        <Button-->
        <!--            android:id="@+id/process_incoming_parcels"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="35dp"-->
        <!--            android:background="#FFFFFF"-->
        <!--            android:text="@string/process_incoming_parcels"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/textView" />-->

        <!--        <Button-->
        <!--            android:id="@+id/manual_item_collection"-->
        <!--            style="?attr/materialButtonOutlinedStyle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:background="#FFFFFF"-->
        <!--            android:text="@string/manual_item_collection"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/process_incoming_parcels" />-->

        <!--        <Button-->
        <!--            android:id="@+id/rts"-->
        <!--            style="?attr/materialButtonOutlinedStyle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:background="#FFFFFF"-->
        <!--            android:text="@string/return_to_sender"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/manual_item_collection" />-->

        <!--        <Button-->
        <!--            android:id="@+id/move_items"-->
        <!--            style="?attr/materialButtonOutlinedStyle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            android:background="#FFFFFF"-->
        <!--            android:text="@string/move_items"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.497"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/rts" />-->

        <!--        <Button-->
        <!--            android:id="@+id/view_activity"-->
        <!--            style="?attr/materialButtonOutlinedStyle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="28dp"-->
        <!--            android:text="@string/view_activity"-->
        <!--            app:layout_constraintEnd_toStartOf="@+id/shelf_audit"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/move_items" />-->

        <!--        <Button-->
        <!--            android:id="@+id/shelf_audit"-->
        <!--            style="?attr/materialButtonOutlinedStyle"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="28dp"-->
        <!--            android:text="Shelf audit"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.5"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/view_activity"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/move_items" />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/nfcExplainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/nfc_logo"
                android:layout_width="47dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/nfc_logo"
                app:layout_constraintBottom_toBottomOf="@+id/nfc_explainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/nfc_explainer"
                app:srcCompat="@drawable/ic_baseline_nfc_24" />

            <TextView
                android:id="@+id/nfc_explainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"

                android:text="@string/nfc_instruction_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/nfc_logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
